Scrollbar in Discuss View fix (#145)
* more fixes

---------

--- a/src/views/retro_active/discuss/DiscussView.module.scss
+++ b/src/views/retro_active/discuss/DiscussView.module.scss
@@ -4,8 +4,8 @@
 
 .content {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    flex-direction: row;
     height: 100%;
     max-height: calc(100vh - 72px);
 }
@@ -15,8 +15,9 @@
     flex-direction: column;
     gap: 16px;
 
-    max-width: 350px;
-    min-width: 300px;
+    min-width: 250px;
+    max-width: 250px;
+
     padding: 16px 8px;
 
     @include assets.scrollbar;
@@ -47,9 +48,7 @@
     flex-grow: 1;
     justify-content: center;
 
-    min-width: 300px;
-    max-width: 900px;
-    padding: 32px 8px 0 8px;
+    padding: 32px 8px 116px 8px;
 
     .card {
         display: flex;
@@ -61,7 +60,8 @@
     .discussCardWrapper {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
+        
+        margin: 0 20px;
 
         background-color: white;
         padding: 10px;
@@ -89,7 +89,8 @@
     flex-direction: column;
     flex-grow: 1;
     position: relative;
-    max-width: 400px;
+    min-width: 300px;
+    max-width: 300px;
 
     .actionPointContent {
         display: flex;
@@ -131,9 +132,7 @@
     .upNextSection {
         display: none;
     }
-}
 
-@media screen and (max-width: 1200px) {
     .actionPointsSection {
         .actionPointInput {
             padding-bottom: 100px;
